# avwx-engine

./: .gitignore  .landscape.yml  .pre-commit-config.yaml  .pylintrc  404.html  CNAME  LICENSE  README.md  Translators.md  avwx.py  avwxoo.py  changelog.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  roadmap.md  setup.cfg  setup.py  sitemap.xml
.circleci/: config.yml
.github/actions/python-hatch-env/: action.yml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: codeql.yml  dependencies.yml  draft_release.yml  release.yml  test.yml
Utils/: AutoTester.py  dbMaker.py
assets/stylesheets/: extra.css
av/airsigmet/: index.html
av/metar/: index.html
av/notam/: index.html
av/pirep/: index.html
av/taf/: index.html
avwx/: __about__.py  __init__.py  _core.py  _meta.py  airep.py  base.py  core.py  exceptions.py  flight_path.py  load_utils.py  metar.py  pirep.py  remarks.py  service.py  speech.py  static.py  station.py  stations.json  stations.sqlite  structs.py  summary.py  taf.py  translate.py  translate.py.bak
avwx/current/: airep.py  airsigmet.py  base.py  metar.py  notam.py  pirep.py  taf.py
avwx/data/: __init__.py  aircraft.json  build_aircraft.py  build_navaids.py  build_stations.py  mappers.py  navaids.json
avwx/data/files/: aircraft.json  good_stations.txt  navaids.json
avwx/forcast/: forecast.py
avwx/forecast/: base.py  gfs.py  gfx.py  nbm.py
avwx/locale/: messages.pot
avwx/locale/es/LC_MESSAGES/: messages.mo  messages.po
avwx/parsing/: __init__.py  atom.py  atom_handlers.py  core.py  exceptions.py  remarks.py  sanitization.py  speech.py  summary.py  translate.py  translation.py
avwx/parsing/sanitization/: base.py  metar.py  pirep.py  taf.py
avwx/parsing/sanitization/cleaners/: base.py  cleaners.py  cloud.py  joined.py  remove.py  replace.py  separated.py  temperature.py  visibility.py  wind.py
avwx/parsing/translate/: base.py  gfs.py  metar.py  remarks.py  taf.py
avwx/patterns/: __init__.py  remarks.py
avwx/service/: __init__.py  base.py  bulk.py  files.py  scrape.py
avwx/static/: __init__.py  airsigmet.py  core.py  gfs.py  glossary.py  metar.py  notam.py  taf.py
avwx/station/: __init__.py  meta.py  search.py  station.py
data/: awos.json  icaos.json  weather_stations.json
docs/: Makefile  conf.py  exceptions.rst  getting-started.md  getting-started.rst  getting-started.txt  getting_started.rst  index.md  index.rst  index.txt  launch.md  make.bat  metar.md  metar.rst  metar.txt  parsing.md  pirep.md  pirep.rst  service.md  service.rst  service.txt  static.md  static.rst  station.md  station.rst  structs.md  structs.rst  taf.md  taf.rst
docs/av/: airsigmet.md  metar.md  notam.md  pirep.md  taf.md
docs/gfs/: mav.md  mex.md
docs/nbm/: nbe.md  nbh.md  nbs.md
docs/util/: data.md  exceptions.md  service.md  static.md  station.md  structs.md
getting-started/: index.html
gfs/mav/: index.html
gfs/mex/: index.html
nbm/nbe/: index.html
nbm/nbh/: index.html
nbm/nbs/: index.html
old/: avwx.py
search/: search_index.json
tests/: __init__.py  test_atom.py  test_base.py  test_core.py  test_flight_path.py  test_metar.py  test_parser.py  test_pirep.py  test_remarks.py  test_service.py  test_speech.py  test_station.py  test_summary.py  test_taf.py  test_translate.py  test_translation_handlers.py  util.py
tests/current/: test_airsigmet.py  test_current.py  test_metar.py  test_notam.py  test_pirep.py  test_taf.py
tests/current/data/: airsigmet.json  sanitize_taf_line_cases.json
tests/current/data/metar/: EGLL.json  KJFK.json  KMCO.json  PHNL.json
tests/current/data/notam/: EGLL.json  KJFK.json  KMCO.json  PHNL.json
tests/current/data/pirep/: EGLL.json  KJFK.json  KMCO.json  PHNL.json
tests/current/data/taf/: EGLL.json  KJFK.json  KMCO.json  PHNL.json
tests/forecast/: _test_gfs.py  test_base.py  test_gfs.py  test_nbm.py
tests/forecast/data/mav/: KJFK.json  KMCO.json  PHNL.json
tests/forecast/data/mex/: KJFK.json  KMCO.json  PHNL.json
tests/forecast/data/nbe/: KJFK.json  KMCO.json  PHNL.json
tests/forecast/data/nbh/: KJFK.json  KMCO.json  PHNL.json
tests/forecast/data/nbs/: KJFK.json  KMCO.json  PHNL.json
tests/forecast/data/nbx/: KJFK.json  KMCO.json  PHNL.json
tests/metar/: EGLL.json  KJFK.json  KMCO.json  PHNL.json
tests/parsing/: test_core.py  test_remarks.py  test_sanitization.py  test_speech.py  test_summary.py  test_translate.py
tests/parsing/cleaners/: test_cleaners.py  test_cloud.py  test_joined.py  test_remove.py  test_replace.py  test_separated.py  test_visibility.py  test_wind.py
tests/parsing/data/: sanitize_metar_list_cases.json  sanitize_report_list_cases.json  sanitize_taf_list_cases.json
tests/patterns/: test_remarks_patterns.py  utils.py
tests/pirep/: KJFK.json  KMCO.json  PHNL.json
tests/service/: test_base.py  test_bulk.py  test_files.py  test_scrape.py
tests/taf/: EGLL.json  KJFK.json  KMCO.json  PHNL.json
util/: AutoTester.py  aircraft.txt  aircraftMaker.py  badStations.csv  build_aircraft.py  build_navaids.py  build_stations.py  build_tests.py  find_bad_stations.py  jsonMaker.py  mappers.py  runways.csv  runways.py  stationList.csv  testMaker.py  update_codes.py  update_icaos.py
util/data/: aircraft.tsv  bad_stations.txt  good_stations.txt  index.html  runways.csv  stations.txt
util/exceptions/: index.html
util/service/: index.html
util/static/: index.html
util/station/: index.html
util/structs/: index.html
